--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -7,6 +7,8 @@
     <title>Flex Header 2</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
+
   <body>
     <div class="header">
       <div class="logo">
@@ -17,10 +19,13 @@
         <li><a href="https://google.com">link-two</a></li>
         <li><a href="https://google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
+
+      <div class="right">
+        <button class="notifications">
         1 new notification
-      </button>
+        </button>
       <div class="profile-image"></div>
+      </div>
     </div>
   </body>
 </html>
