--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -8,18 +8,24 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="header">
-      <ul class="left-links">
+    <div class="header-wrapper">
+      <div class="header">
+       <ul class="left-links">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
-      </ul>
+        </ul>
       <ul class="right-links">
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
-    <div class="content">
-      <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+  </div>
+
+    <div class="content-wrapper">
+      <div class="content">
+       <div class="logo">
+        <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+       </div>
       <div class="input">
         <input type="text">
       </div>
@@ -28,6 +34,8 @@
         <button>Do the other thing!</button>
       </div>
     </div>
+    </div>
+    
     <div class="footer">
       <ul class="left-links">
         <li><a href="#">Advertising</a></li>
